--- a/关于让孩子爱上阅读的清单.md
+++ b/关于让孩子爱上阅读的清单.md
@@ -1,4 +1,4 @@
-# 关于让孩子爱上阅读的清单                 
+# 关于让孩子爱上阅读的清单（转自读库）
 
 1.越是强调，越是刻意。阅读同样如此。不用老是提醒孩子“爱读书才是好孩子”，批评孩子的不爱读书，以及炫耀孩子多么爱读书并读了多少书。就像我们不再讴歌呼吸和饮食一样，让阅读成为自然而然的事情，成为他的生活习惯和生存必需。              
 
