--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -2,6 +2,8 @@
 #### 多项式的特性
 ###### 多项式的知识
 一个多项式的知识，就是该多项式的系数。
+![](http://latex.codecogs.com/gif.latex?\\frac{\\partial J}{\\partial \\theta_k^{(j)}}=\\sum_{i:r(i,j)=1}{\\big((\\theta^{(j)})^Tx^{(i)}-y^{(i,j)}\\big)x_k^{(i)}}+\\lambda \\xtheta_k^{(j)})
+
 
 ###### Schwatz-Zippel多项式定理
 - 如果我们有两个阶为 d 的不相等多项式，他们相交的点数不会超过 d
@@ -44,8 +46,6 @@ E(v) = g^v\ (mod\ n)
 这里 v 就是我们要加密的值, n是模。当n和v都足够大的时候，从E(v)值找回v值，是比较难的。
 
 #### 同态乘法
-
-![](http://latex.codecogs.com/gif.latex?\\(g^n)
 
 ```math
 E(v) = (g^n) ^ m\ (mod\ n) = g ^ {x * y }\ (mod\ n)
