--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -2,7 +2,7 @@
 #### 多项式的特性
 ###### 多项式的知识
 一个多项式的知识，就是该多项式的系数。    
-![image](http://latex.codecogs.com/gif.latex?\\{y^{n}})
+![image](http://latex.codecogs.com/gif.latex?\\y^{n})
 
 
 ###### Schwatz-Zippel多项式定理
