--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -2,7 +2,7 @@
 #### 多项式的特性
 ###### 多项式的知识
 一个多项式的知识，就是该多项式的系数。    
-![image](http://latex.codecogs.com/gif.latex?\\y^{n})
+
 
 
 ###### Schwatz-Zippel多项式定理
@@ -39,6 +39,7 @@
 ## 同态隐藏
 #### 同态加密
 选择一个基础的（基数需要具有某些特定的属性）的自然数 g（如 5），然后我们以要加密的值为指数对 g 进行求幂后，进行模运算。
+![image](http://latex.codecogs.com/gif.latex?\\E(v)%20=%20g^v\%20(mod\%20n))
 
 ```math
 E(v) = g^v\ (mod\ n)
