--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -39,29 +39,23 @@
 ## 同态隐藏
 #### 同态加密
 选择一个基础的（基数需要具有某些特定的属性）的自然数 g（如 5），然后我们以要加密的值为指数对 g 进行求幂后，进行模运算。
+
 ![image](http://latex.codecogs.com/gif.latex?\\E(v)%20=%20g^v\%20(mod\%20n))
 
-```math
-E(v) = g^v\ (mod\ n)
-```
 这里 v 就是我们要加密的值, n是模。当n和v都足够大的时候，从E(v)值找回v值，是比较难的。
 
 #### 同态乘法
 
-```math
-E(v) = (g^n) ^ m\ (mod\ n) = g ^ {x * y }\ (mod\ n)
-```
-
+![image](http://latex.codecogs.com/gif.latex?\\E(v)%20=%20(g^n)%20^%20m\%20(mod\%20n)%20=%20g%20^%20{x%20*%20y%20}\%20(mod\%20n))
 
 #### 同态加法
-```math
-E(v) = (g^i) * (g^j)\ (mod\ n) = g^{i+j}\ (mod\ n)
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\E(v)%20=%20(g^i)%20*%20(g^j)\%20(mod\%20n)%20=%20g^{i+j}\%20(mod\%20n))
 
 #### 多项式的同态加密
-```math
-g^{x³-3x²+2x} \ (mod\ n)= (g^{x³})^1 · (g^{x²})^{-3} ·(g^x)^2 \ (mod\ n)  = g^{1x³} · (g^{-3x²})·(g^{2x}) \ (mod\ n)
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{x³-3x²+2x} \ (mod\ n)= (g^{x³})^1 · (g^{x²})^{-3} ·(g^x)^2 \ (mod\ n)  = g^{1x³} · (g^{-3x²})·(g^{2x}) \ (mod\ n))
+
 通过这些运算，我们就获得了多项式在一些未知数 x处的加密计算结果。因为同态的性质，同一个多项式的加密运算在加密空间中始终是相同的。
 
 #### 基于多项式的同态加密的证明
@@ -70,28 +64,29 @@ g^{x³-3x²+2x} \ (mod\ n)= (g^{x³})^1 · (g^{x²})^{-3} ·(g^x)^2 \ (mod\ n)  
      1. 取一个随机数 s ，也就是秘密值
      2. 指数 i 取值为 0，1，…，d 时分别计算出 s 的 i 次幂的加密结果，即：代入 s 计算未加密的目标多项式：t(s)
      3. 将对 s 的幂的加密值提供给 prover：
-```math
-     g^{s^0},g^{s^1},g^{s^2}...g^{s^d}
-```     
+ 
+![image](http://latex.codecogs.com/gif.latex?\\g^{s^0},g^{s^1},g^{s^2}...g^{s^d})
+
+
 - Prover  
      1. 计算多项式h(x) = p(x)/t(x)
      2. 根据多项式的同态加密公式，使用verifier传递的加密值
-```math
-     g^{s^0},g^{s^1},g^{s^2}...g^{s^d}
-```     
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{s^0},g^{s^1},g^{s^2}...g^{s^d})
+
 和系数c_0，c_1，…，c_d 计算 g^p(s)，然后同样计算 g^h(s)，然后将结果 g^p(s) 和 g^h(s) 提供给 verifier
 
 - Verifier
      1. verifier 去校验 p(s) = t(s) * h(s)，可推出： 
-```math
-g^{p(s)} = (g^{h(s)})^{t(s)} = g^{h(s)*t(s)}
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)}%20=%20(g^{h(s)})^{t(s)}%20=%20g^{h(s)*t(s)}))
+
 
 ###### 缺陷
 上述证明中我们是通过对秘密值s的幂的加密值再进行求幂来对系数进行“赋值”。我们已经限制了 prover 对 s 幂的加密值的选择, 但是这个限制并不是强制的，也就是说，prover 可以使用任何可能的方法找到满足下面等式的值
-```math
-g^{p'} = g^{h'*t(s)}
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27}%20=%20g^{h%27*t(s)}))
+
 再用这两个值来代替  gᵖ'  和 gʰ'  将它交给 verifier。所以 verifier 需要能够证明 prover 给出的值就是用s幂的加密值而不是其它值计算出来的。  
 **问题**：t(s)值此时prover是否知道？若不知道，他怎么找得出gᵖ'  和 gʰ' 呢？
 
@@ -99,14 +94,13 @@ g^{p'} = g^{h'*t(s)}
 #### 协议
 1. Alice 有一个值a，她想要 Bob 对其进行任意指数的求幂（这里 a是一个有限域群的生成器），唯一的要求是只能对 a 进行求幂，为了保证这一点，她要：
 选择一个随机数 q,计算 
-```math
-a' = a^q\ (mod\ n)
-```
+ 
+![image](http://latex.codecogs.com/gif.latex?\\a%27%20=%20a^q\%20(mod\%20n))
+
 2. 提供一个元组 (a, a') 给 Bob, 然后让他对这两个值执行任意的求幂运算，返回结果元组 (b, b')，这里的指数 “q-变换” 依然保持不变，即 
 
-```math
-b' = b^q\ (mod\ n)
-```
+![image](http://latex.codecogs.com/gif.latex?\\b%27%20=%20b^q\%20(mod\%20n))
+
 
 3. 因为 Bob 无法从元组 (a, a') 中提取 q 的值，通过暴力破解也难以实现，那就可以推断 Bob 生成有效元组的唯一方法就是执行下面的步骤：
     1. 选择一个值 c
@@ -115,9 +109,8 @@ b' = b^q\ (mod\ n)
 
 c) 有了回复的元组和 α，Alice 就可以验证等式：
 
-```math
-    (b)^q = b' 
-```
+![image](http://latex.codecogs.com/gif.latex?\\(b)^q%20=%20b%27)
+
 
 这个协议提供了一个证明给 Alice ，Bob 确实是用他知道的某个值对 a进行求幂的，而且他也不能做别的任何操作，例如：乘法，加法，因为这样就会破坏q-变换关系，解决了[基于多项式的同态加密的证明]中的证明的缺陷。
 
@@ -131,34 +124,31 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 **verifier:**
 1. 选择随机值q
 2. 提供加密值
-```math
-g^{s^0}, g^{s^1}, g^{s^2}...g^{s^d}
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{s^0},%20g^{s^1},%20g^{s^2}...g^{s^d})
+
 和他们的变换
-```math
-g^{q{s^0}}, g^{q{s^1}}, g^{q{s^2}}...g^{q{s^d}}
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{q{s^0}},%20g^{q{s^1}},%20g^{q{s^2}}...g^{q{s^d}})
 
 **prover:**
 1. 计算给定的带有 s 的幂的加密多项式
 ```math
  g^{p(s)} = g^{c_0*{s^0}} * g^{c_1*{s^1}} * g^{c_2*{s^2}}... * g^{c_d*{s^d}}
 ```
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)}%20=%20g^{c_0*{s^0}}%20*%20g^{c_1*{s^1}}%20*%20g^{c_2*{s^2}}...%20*%20g^{c_d*{s^d}})
 
 2. 计算给定的带有 s 的幂的转换的加密“转换”多项式：
-```math
- g^{p'(s)} = g^{c_0*q*{s^0}} * g^{c_1*q*{s^1}} * g^{c_2*q*{s^2}}... * g^{c_d*q*{s^d}} = (g^{c_0*{s^0}} * g^{c_1*{s^1}} * g^{c_2*{s^2}}... * g^{c_d*{s^d}})^q = (g^{p(s)})^q
- 
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)}%20=%20g^{c_0*q*{s^0}}%20*%20g^{c_1*q*{s^1}}%20*%20g^{c_2*q*{s^2}}...%20*%20g^{c_d*q*{s^d}}%20=%20(g^{c_0*{s^0}}%20*%20g^{c_1*{s^1}}%20*%20g^{c_2*{s^2}}...%20*%20g^{c_d*{s^d}})^q%20=%20(g^{p(s)})^q)
 
 3. 将计算结果 g^{p(s)} 和  g^{p'(s)}, 发给verfier
 
 **verifier:**
 若
-```math
- g^{p'(s)} = g^{q*p(s)}
- 
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)}%20=%20g^{q*p(s)})
+
 则说明：prover很大概率上是使用verifier提供的数据进行同态加密计算的，因为prover并不知道q的值。
 
 ## 零知识提取
@@ -170,22 +160,18 @@ g^{q{s^0}}, g^{q{s^1}}, g^{q{s^2}}...g^{q{s^d}}
 prover:
 1. 使用随机值 δ (delta)来“变换”这些值
 
-```math
-g^{p(s) * δ}
-```
-```math
-g^{p'(s) * δ}
-```
-```math
-g^{h(s) * δ}
-```
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*%20%CE%B4})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)%20*%20%CE%B4})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{h(s)%20*%20%CE%B4})
+
 
 verifier:
 1.  验证
-```math
-g^{p(s) * δ} = g^{h(s) * δ * t(s)}
-```
-```math
-g^{p'(s) * δ} = g^{p(s) * δ * q}
-```
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*%20%CE%B4}%20=%20g^{h(s)%20*%20%CE%B4%20*%20t(s)})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)%20*%20%CE%B4}%20=%20g^{p(s)%20*%20%CE%B4%20*%20q})
+
 如此，就对prover发过来结果数据进行了随机变形，但verifier虽然不知道该随机数，但仍然能够对结果进行验证。
