--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -54,7 +54,7 @@
 
 #### 多项式的同态加密
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{x³-3x²+2x} \ (mod\ n)= (g^{x³})^1 · (g^{x²})^{-3} ·(g^x)^2 \ (mod\ n)  = g^{1x³} · (g^{-3x²})·(g^{2x}) \ (mod\ n))
+![image](http://latex.codecogs.com/gif.latex?\\g^{x%C2%B3-3x%C2%B2+2x}%20\%20(mod\%20n)=%20(g^{x%C2%B3})^1%20%C2%B7%20(g^{x%C2%B2})^{-3}%20%C2%B7(g^x)^2%20\%20(mod\%20n)%20%20=%20g^{1x%C2%B3}%20%C2%B7%20(g^{-3x%C2%B2})%C2%B7(g^{2x})%20\%20(mod\%20n))
 
 通过这些运算，我们就获得了多项式在一些未知数 x处的加密计算结果。因为同态的性质，同一个多项式的加密运算在加密空间中始终是相同的。
 
@@ -133,9 +133,7 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 
 **prover:**
 1. 计算给定的带有 s 的幂的加密多项式
-```math
- g^{p(s)} = g^{c_0*{s^0}} * g^{c_1*{s^1}} * g^{c_2*{s^2}}... * g^{c_d*{s^d}}
-```
+
 ![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)}%20=%20g^{c_0*{s^0}}%20*%20g^{c_1*{s^1}}%20*%20g^{c_2*{s^2}}...%20*%20g^{c_d*{s^d}})
 
 2. 计算给定的带有 s 的幂的转换的加密“转换”多项式：
@@ -146,7 +144,6 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 
 **verifier:**
 若
-
 ![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)}%20=%20g^{q*p(s)})
 
 则说明：prover很大概率上是使用verifier提供的数据进行同态加密计算的，因为prover并不知道q的值。
