--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -70,11 +70,7 @@
 
 - Prover  
      1. 计算多项式h(x) = p(x)/t(x)
-     2. 根据多项式的同态加密公式，使用verifier传递的加密值
-
-![image](http://latex.codecogs.com/gif.latex?\\g^{s^0},g^{s^1},g^{s^2}...g^{s^d})
-
-和系数c_0，c_1，…，c_d 计算 g^p(s)，然后同样计算 g^h(s)，然后将结果 g^p(s) 和 g^h(s) 提供给 verifier
+     2. 根据多项式的同态加密公式，使用verifier传递的加密值 ![image](http://latex.codecogs.com/gif.latex?\\g^{s^0},g^{s^1},g^{s^2}...g^{s^d}) 和系数c_0，c_1，…，c_d 计算 g^p(s)，然后同样计算 g^h(s)，然后将结果 g^p(s) 和 g^h(s) 提供给 verifier
 
 - Verifier
      1. verifier 去校验 p(s) = t(s) * h(s)，可推出： 
