--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -153,7 +153,7 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 prover:
 1. 使用随机值 δ (delta)来“变换”这些值
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*%20%CE%B4})
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*\delta})
 
 ![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)%20*%20%CE%B4})
 
