--- a/交互式零知识证明.md
+++ b/交互式零知识证明.md
@@ -1,9 +1,16 @@
+<center>深入浅出零知识证明 1 - 从多项式谈起</center>
+
+## 交互式零知识证明
+#### 交互式的涵义
+零知识证明过程中，有两个角色verifier和prover。在证明的过程中，如果verifier和prover会进行多次信息的传递，就称之为交互式。
+
+#### 零知识证明证明什么
+在零知识证明中，所有的现实问题，都会转换为一个多项式。最终的证明目的，是prover需要向verifier证明，其知道该多项式，即知道该多项式的知识（多项式系数）；且在证明的过程中，prover不能向verifier泄露任何关于该多项式的信息。
+
 ## 多项式
 #### 多项式的特性
 ###### 多项式的知识
 一个多项式的知识，就是该多项式的系数。    
-
-
 
 ###### Schwatz-Zippel多项式定理
 - 如果我们有两个阶为 d 的不相等多项式，他们相交的点数不会超过 d
@@ -153,18 +160,18 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 prover:
 1. 使用随机值 δ (delta)来“变换”这些值
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*\delta})
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)*\delta})
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)%20*%20%CE%B4})
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)*\delta})
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{h(s)%20*%20%CE%B4})
+![image](http://latex.codecogs.com/gif.latex?\\g^{h(s)*\delta})
 
 
 verifier:
 1.  验证
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)%20*%20%CE%B4}%20=%20g^{h(s)%20*%20%CE%B4%20*%20t(s)})
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)*\delta}=g^{h(s)*\delta*t(s)})
 
-![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)%20*%20%CE%B4}%20=%20g^{p(s)%20*%20%CE%B4%20*%20q})
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)*\delta}=g^{p(s)*\delta*q})
 
 如此，就对prover发过来结果数据进行了随机变形，但verifier虽然不知道该随机数，但仍然能够对结果进行验证。
