Update 椭圆曲线 一: 实数域的椭圆曲线.md

--- a/椭圆曲线 一: 实数域的椭圆曲线.md
+++ b/椭圆曲线 一: 实数域的椭圆曲线.md
@@ -71,11 +71,11 @@ P+(Q+R)=Q+(P+R)=R+(P+Q)=⋯=0。
 
 - 标量乘法
 
-![image](http://latex.codecogs.com/gif.latex?\\S = H + H + ....)
+![image](http://latex.codecogs.com/gif.latex?\\S=H+H+....)
 
 即
 
-![image](http://latex.codecogs.com/gif.latex?\\S = nH)
+![image](http://latex.codecogs.com/gif.latex?\\S=n*H)
 
 写成上述式子，可以看出计算nH需要做n次加法。如果n有k位二进制的话，我们的算法时间复杂度是O(2^k)，这不是一个好的结果。还好还有更好的算法。
 
