--- a/交互式零知识证明2.md
+++ b/交互式零知识证明2.md
@@ -1,5 +1,7 @@
 ## <center>深入浅出零知识证明系列 2-交互式零知识证明：同态加密的秘密</center>
 
+上一篇博文[深入浅出零知识证明系列 1-交互式零知识证明：从多项式谈起](https://smallfat.github.io/%E4%BA%A4%E4%BA%92%E5%BC%8F%E9%9B%B6%E7%9F%A5%E8%AF%86%E8%AF%81%E6%98%8E1.html)中谈到，基于因式分解的多项式证明，有着明显的缺陷：verifier要向prover传递明文的验证点r，使得prover能够伪造出多项式的信息，并能通过verifier的验证。怎样才能既不传递r的明文值，又能让verifier进行验证呢？请看以下分解。
+
 ## 同态隐藏
 #### 同态加密
 选择一个基础的（基数需要具有某些特定的属性）的自然数 g（如 5），然后我们以要加密的值为指数对 g 进行求幂后，进行模运算。
@@ -107,3 +109,28 @@ c) 有了回复的元组和 α，Alice 就可以验证等式：
 ![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)}%20=%20g^{q*p(s)})
 
 则说明：prover很大概率上是使用verifier提供的数据进行同态加密计算的，因为prover并不知道q的值。
+
+## 零知识提取
+如[Knowledge-of-Exponent Assumption]节所讲，我们已基本完成交互式的多项式证明。
+
+但还有一个问题：verifier 可能能够从 prover发送的结果数据g^h(s),g^p(s)和g^p'(s)中提取未知多项式p(x)的知识，我们如何选择证明使得这个校验依然有效，同时又保证没有知识能被提取？
+
+#### 协议
+prover:
+1. 使用随机值 δ (delta)来“变换”这些值
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)*\delta})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)*\delta})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{h(s)*\delta})
+
+
+verifier:
+1.  验证
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p(s)*\delta}=g^{h(s)*\delta*t(s)})
+
+![image](http://latex.codecogs.com/gif.latex?\\g^{p%27(s)*\delta}=g^{p(s)*\delta*q})
+
+如此，就对prover发过来结果数据进行了随机变形，但verifier虽然不知道该随机数，但仍然能够对结果进行验证。
