--- a/找工杂记.md
+++ b/找工杂记.md
@@ -1,11 +1,14 @@
 # 1
 这两天连着面了两个senior blockchain engineer职位，这两个职位属于同一家公司不同部门。这里记录一下一些有趣的点和值得总结的事。
+
 说第一个。面试官有两个，其中一个小哥开了视频，能够看见带着耳环的清秀脸庞，他们问了几个问题，有跟网络编程有关，也有跟程序测试经验相关的，还有blockchain方面的。印象比较深的有这几条：
 - Q：网络编程中有个现象，就是发送方发送数据太快，接受方怎么处理？
+
 我第一反应是这个应该做流控，所以回答了TCP滑动窗口做流控和应用层做流控两个方法。然后小哥说，你还能想到其他的吗？
 
-我当时真没明白考官的意图。后来我想了想这个问题，
-考官是不是还要考处理数据丢失重发的问题，或者考接收方缓冲区数据丢失的问题，或者数据粘包的问题，不得而知，最后给了我一个网络编程不深入的评价。
+我当时真没明白考官的意图。
+
+后来我想了想这个问题: 考官是不是还要考处理数据丢失重发的问题，或者考接收方缓冲区数据丢失的问题，或者数据粘包的问题，不得而知，最后给了我一个网络编程不深入的评价。
 
 这个题目本身没有问题，只是我没有把意图问清楚，最后答案南辕北辙。也算是一个教训吧。
 
@@ -19,6 +22,27 @@
 
 再说说第二场吧。
 
-第一场过后，我觉得并没有发挥我应有的水平，又请求HR再给一次机会面其他职位的机会。HR很nice，又给安排了第二场。
+第一场过后，我觉得并没有发挥我应有的水平，又请求HR再给一次机会面其他职位的机会。
 
-TBC
+HR很nice，又给安排了第二场。
+
+- Q：你在这么多大厂干过，有没有网络性能调优的框架什么的。  
+现场给我反应的时间不多，我第一反应是没干过什么性能调优的框架什么的。场面一度很尴尬。。。。。。
+
+后来反思时才想起，4G核心网网关，是有一套完整的trouble shotting的方案的。而这种方案，正是性能调优的基础。
+
+该方案主要运行时从整个系统中收集各种运行指标的，这些指标被称为counter。
+
+counter是一个大整数，基本操作是++和--。运行中根据需要对这些counter进行操作。
+
+counter被收集完成后，有个分析软件对counter数据进行分析。由此找出关键数据，进行trouble shotting或性能调优。
+
+- Q：在分布式系统中，有没有一个调优系统？
+这个真没接触过。
+
+面试官给我提供了一个信息，就是把一个请求中的所有api调用全部记录下来，这样来处理系统中的所有数据，从而进行系统问题处理和调优。另外还可以用dtrace进行性能动态追踪。
+
+好吧，你也猜到了，这个面试肯定是挂了。不过在交流的过程中，真的学到了不少东西，虽然有点被鄙视，毕竟hr二面的结果都懒得给我发了，哈哈。
+
+我打算在不久的将来，好好研究下dtrace，说不定能做点什么东西出来。
+
