修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -4,3 +4,16 @@ tags: 回放 并行
 category: /小书匠/日记/2022-07
 grammar_cjkRuby: true
 ---
+# 背景
+# 思路
+### 执行单元
+- 多个执行单元同时进行xlog回放
+
+### 回放组织
+- 依据对xlog的record类别不同，采用不同的回放组织策略
+	- 事务日志
+		- 单线程回放
+	- DML日志 
+		- 为属于同一个table的records，放入一个有序队列，并分配一个回放执行单元
+		- 队列内部的
+	- DDL日志
