修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -12,8 +12,11 @@ grammar_cjkRuby: true
 ### 回放组织
 - 依据对xlog的record类别不同，采用不同的回放组织策略
 	- 事务日志
-		- 单线程回放
+		- 为属于事务日志的xlog，放入一个有序队列，并分配一个回放执行单元
+		- 队列按照xlog recored原顺序排序
 	- DML日志 
 		- 为属于同一个table的records，放入一个有序队列，并分配一个回放执行单元
-		- 队列内部的
+		- 队列按照xlog record原顺序排序
+		- 在相应开始事务日志(start)执行了以后，再来执行该事务下所有不同table下的XLOG回放，直到某条record的下一个同事务record是结束事务日志(commit/rollback)
 	- DDL日志
+		- 考虑与相应DDL的前后关系问题？
