修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -9,7 +9,7 @@ grammar_cjkRuby: true
 ### 执行单元
 - 多个执行单元同时进行xlog回放
 
-### 回放组织
+### 回放策略
 - 依据对xlog的record类别不同，采用不同的回放组织策略
 	- 事务日志
 		- 为属于事务日志的xlog，放入一个有序队列，并分配一个回放执行单元
@@ -19,4 +19,18 @@ grammar_cjkRuby: true
 		- 队列按照xlog record原顺序排序
 		- 在相应开始事务日志(start)执行了以后，再来执行该事务下所有不同table下的XLOG回放，直到某条record的下一个同事务record是结束事务日志(commit/rollback)
 	- DDL日志
-		- 考虑与相应DDL的前后关系问题？
+		- 是否需要考虑与相应DDL的前后关系问题？-
+
+
+# 目标
+- 目前postdb v3是串行回放xlog，希望能实现并行回放，且能够保证数据的一致性
+
+# 关联因素
+- xlog的结构
+- 回放时的事务控制策略
+	- 并行/串行？
+	- 串行/并行回放时，事务的ACID分别如何保证？
+		- 为了保证事务的ACID，回放时的动作执行顺序是否要与写入时完全一致？（全序/偏序？）
+		- 
+- session
+- 对某xlog record进行回放的时机
