修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -23,14 +23,26 @@ grammar_cjkRuby: true
 
 
 # 目标
-- 目前postdb v3是串行回放xlog，希望能实现并行回放，且能够保证数据的一致性
+- 目前postdb v3是串行回放xlog，希望能实现并行回放，且在回放完成后能够保证数据的一致性
+- 在并行回放的过程中中断回放，亦需要保证page buffer中数据的完整性和一致性
 
 # 关联因素
 - xlog的结构
+- xlog record的类型
+- NRL
+	- 由于并行回放是非单一连续回放，NRL可能需要重新考虑其意义
+- PGCL
+- 事务的ACID
 - 回放时的事务控制策略
 	- 并行/串行？
 	- 串行/并行回放时，事务的ACID分别如何保证？
-		- 为了保证事务的ACID，回放时的动作执行顺序是否要与写入时完全一致？（全序/偏序？）
-		- 
-- session
-- 对某xlog record进行回放的时机
+		- 为了保证事务的ACID，回放时的sql动作执行顺序是否要与写入时完全一致？
+			- 类型1：每个sql动作的全序顺序一致
+			- 类型2：每个事务内的sql动作顺序一致
+
+# 并行回放要解决的一些问题
+- 数据写入顺序的考虑
+	- 串行回放xlog record，数据写入到page buffer的先后顺序，与在计算节点写入page buffer的顺序是严格一致的
+	- 那么，并行回放时，上述顺序的关系应该是怎么样的呢？
+- 事务与回放的关系
+- 事务隔离性
