修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -44,5 +44,10 @@ grammar_cjkRuby: true
 - 数据写入顺序的考虑
 	- 串行回放xlog record，数据写入到page buffer的先后顺序，与在计算节点写入page buffer的顺序是严格一致的
 	- 那么，并行回放时，上述顺序的关系应该是怎么样的呢？
-- 事务与回放的关系
-- 事务隔离性
+- 事务与并行回放的关系
+- 事务的ACID怎么实现
+- 事务之间的依赖性如何判断
+
+# 并行回放在其他数据库的实现
+### opengauss
+![opengauss_parallel_replay](https://raw.githubusercontent.com/smallfat/smallfat.github.io/master/小书匠/opengauss_parallel_replay.jpg)
