修改文件: 并行回放调研.md

--- a/并行回放调研.md
+++ b/并行回放调研.md
@@ -47,11 +47,13 @@ grammar_cjkRuby: true
 - 事务与并行回放的关系
 - 事务的ACID怎么实现
 - 事务之间的依赖性如何判断
+- 并行回放对现有串行回放下
 
 # 并行回放在其他数据库的实现
 ### opengauss
 ###### 原理图
 ![opengauss_parallel_replay](https://raw.githubusercontent.com/smallfat/smallfat.github.io/master/小书匠/opengauss_parallel_replay.jpg)
+
 ###### 说明
 （1） “Walreceiver”线程收到日志成功写入磁盘后，“XLogReadWorker”线程从“Walreceiver”线程的buffer中读取字节流，“XLogReadManager”线程将字节流decode（解码）成redoitem（单个回放对象）。“Startupxlog”线程按照表文件名粒度（refilenode）将redoitem发放给各个“ParseRedoRecord”线程，其他的日志发送给“TrxnManager”线程。
 
