修改文件: 周工作.md

--- a/周工作.md
+++ b/周工作.md
@@ -3,7 +3,7 @@ title: 本周工作
 tags: 
 grammar_cjkRuby: true
 ---
-
+# 10/14/2022
 -《管理员手册》
 
    - review新增加的《本地化》《高可用、负载均衡和复制》两章内容
@@ -20,3 +20,30 @@ grammar_cjkRuby: true
 	
 - package功能调研
   
+  # 10/21/2022
+  - 调研 IvorySQL
+	- codebase: pg 14
+	- commit for package 
+	```
+	Added PL/SQL Packages support in IvorySQL, so that it can run the PL/SQL Packages in IvorySQL database.
+	```
+	[https://github.com/IvorySQL/IvorySQL/commit/4d403be6c8c3ddaf837376b45f8cbb9b49b28772](https://github.com/IvorySQL/IvorySQL/commit/4d403be6c8c3ddaf837376b45f8cbb9b49b28772)
+
+	- commit for pl/isql
+	
+	```
+	Added pl/isql language that is based on plpgsql and will be used for compatibility features.
+	```
+
+[https://github.com/IvorySQL/IvorySQL/commit/bdf2f331fb444352e6f493d4fe86159a5a3f0040](https://github.com/IvorySQL/IvorySQL/commit/bdf2f331fb444352e6f493d4fe86159a5a3f0040)
+	
+- 移植进度
+  - postdb上新开一个本地分支，用于移植“commit for package ”
+  - 相关代码已合并，但尚未调试
+
+- 移植问题
+  - 代码基线不同：postdb基于pg 13.2，IvorySQL基于pg 14，不知feature package是否对pg14的某些特性有依赖？ 可能需要在调试过程中确定。
+  
+  - 可能会有oracle语法兼容问题：估计会对"commit for pl/isql"有依赖。
+  
+  - 若“commit for package ”合并成功，还要考虑IvorySQL内 bug-fixs for package的合并，这个需要逐个甄别，测试
