修改文件: 并发控制与分布式事务总结解惑.md

--- a/并发控制与分布式事务总结解惑.md
+++ b/并发控制与分布式事务总结解惑.md
@@ -16,8 +16,16 @@ grammar_cjkRuby: true
 	- 不同的隔离级别，对应同一段MVCC实现代码，由哪里控制隔离级别？
 	
 	
+# 并发控制的难点在哪里？
+- 各个事务看到的数据不一致
+	- dirty read: 一个事务读到了其他事务未提交的数据
+	- unrepeated read: 一个事务内，最开始读到的数据和事务结束前的任意时刻读到的同一批数据出现不一致的情况
+	- phansm read: 
+	
 # 通用的并发控制的一般方法是什么？
-- 古老的方法：2PL (2 Phase Locking)
+- 古老的方法：2PL (2 Phase Locking)：基于lock的方式效率低，被MVCC取代
+- MVCC (Multi Version Concurrency Control)：多版本并发控制
+	
 
 
 # 通用的分布式事务一致性/隔离性实现方法是什么？
