修改文件: 并发控制与分布式事务总结解惑.md

--- a/并发控制与分布式事务总结解惑.md
+++ b/并发控制与分布式事务总结解惑.md
@@ -17,16 +17,26 @@ grammar_cjkRuby: true
 	
 	
 # 并发控制的难点在哪里？
-- 各个事务看到的数据不一致
-	- dirty read: 一个事务读到了其他事务未提交的数据
-	- unrepeated read: 一个事务内，最开始读到的数据和事务结束前的任意时刻读到的同一批数据出现不一致的情况
-	- phansm read: 
+- 事务看到的数据不合理
+	- 脏读 dirty read : 一个事务读到了其他事务未提交的数据
 	
-# 通用的并发控制的一般方法是什么？
-- 古老的方法：2PL (2 Phase Locking)：基于lock的方式效率低，被MVCC取代
-- MVCC (Multi Version Concurrency Control)：多版本并发控制
-	
+	- 不可重复读 unrepeated read: 	一个事务内，最开始读到的数据和事务结束前的任意时刻读到的同一批数据出现不一致的情况
 
+	- 幻读 phansm read
+```
+	幻读，并不是说两次读取获取的结果集不同
+	
+	幻读侧重的方面是某一次的 select 操作得到的结果所表征的数据状态无法支撑后续的业务操作。
+	
+	更为具体一些：select 某记录是否存在，不存在，准备插入此记录，但执行 insert 时发现此记录已存在，无法插入，此时就发生了幻读。
+	
+	不可重复读侧重表达 读-读，幻读则是说 读-写，用写来证实读的是鬼影。
+```
+- 分布式系统中，去中心化场景下无法产生全局一致性ID (比如一致性事务ID或者一致性timestamp)，没有全局一致性ID，就无法比较事务发生的先后顺序。
+
+# 通用的并发控制的一般方法是什么？
+- 古老的方法：2PL (2 Phase Locking)：基于lock的方式， 只有读读之间可以并发，读写，写读，写写都要阻塞。效率低，被MVCC取代
+- MVCC (Multi Version Concurrency Control)：多版本并发控制。类似于CopyOnWrite，同一事务先后产生的更改不会覆盖，而是保留多个版本。
 
 # 通用的分布式事务一致性/隔离性实现方法是什么？
 
