修改文件: 并发控制与分布式事务总结解惑.md

--- a/并发控制与分布式事务总结解惑.md
+++ b/并发控制与分布式事务总结解惑.md
@@ -16,7 +16,7 @@ grammar_cjkRuby: true
 	- 不同的隔离级别，对应同一段MVCC实现代码，由哪里控制隔离级别？
 	
 	
-# 并发控制的难点在哪里？
+# 单机并发控制的难点在哪里？
 - 事务看到的数据不合理
 	- 脏读 dirty read : 一个事务读到了其他事务未提交的数据
 	
@@ -32,12 +32,22 @@ grammar_cjkRuby: true
 	
 	不可重复读侧重表达 读-读，幻读则是说 读-写，用写来证实读的是鬼影。
 ```
-- 分布式系统中，去中心化场景下无法产生全局一致性ID (比如一致性事务ID或者一致性timestamp)，没有全局一致性ID，就无法比较事务发生的先后顺序。
 
 # 通用的并发控制的一般方法是什么？
 - 古老的方法：2PL (2 Phase Locking)：基于lock的方式， 只有读读之间可以并发，读写，写读，写写都要阻塞。效率低，被MVCC取代
 - MVCC (Multi Version Concurrency Control)：多版本并发控制。类似于CopyOnWrite，同一事务先后产生的更改不会覆盖，而是保留多个版本。
+	- 两种不同类型的MVCC
+		- 事务ID + 活跃事务表
+		- timestamp
 
-# 通用的分布式事务一致性/隔离性实现方法是什么？
+
+# 分布式系统并发控制的难点在哪里？
+- 存在与单机系统同样的难点
+- 分布式系统中，去中心化场景下无法产生全局一致性ID，即MVCC中的一致性版本号 (比如事务ID或者timestamp)，没有全局一致性ID，就无法比较事务发生的先后顺序。
+
+# 通用的分布式事务并发控制的实现方法是什么？
+分布式环境下，怎么产生类似单机的一致性ID？
+- 建一个单点系统，专门产生一致性ID
+
 
 
