修改文件: 周工作.md

--- a/周工作.md
+++ b/周工作.md
@@ -24,19 +24,7 @@ grammar_cjkRuby: true
   - 调研 IvorySQL
 	- codebase: pg 14
 	- commit for package 
-	```
-	Added PL/SQL Packages support in IvorySQL, so that it can run the PL/SQL Packages in IvorySQL database.
-	```
-	[https://github.com/IvorySQL/IvorySQL/commit/4d403be6c8c3ddaf837376b45f8cbb9b49b28772](https://github.com/IvorySQL/IvorySQL/commit/4d403be6c8c3ddaf837376b45f8cbb9b49b28772)
 
-	- commit for pl/isql
-	
-	```
-	Added pl/isql language that is based on plpgsql and will be used for compatibility features.
-	```
-
-[https://github.com/IvorySQL/IvorySQL/commit/bdf2f331fb444352e6f493d4fe86159a5a3f0040](https://github.com/IvorySQL/IvorySQL/commit/bdf2f331fb444352e6f493d4fe86159a5a3f0040)
-	
 - 移植进度
   - postdb上新开一个本地分支，用于移植“commit for package ”
   - 相关代码已合并，但尚未调试
@@ -47,7 +35,44 @@ grammar_cjkRuby: true
   - 可能会有oracle语法兼容问题：估计会对"commit for pl/isql"有依赖。
   
   - 若“commit for package ”合并成功，还要考虑IvorySQL内 bug-fixs for package的合并，这个需要逐个甄别，测试
-  
-# 11/04/2022
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 2023.2.17
+
+- PCS 节点选举功能调试
+
+
+
+# 2023.2.24
+1. PCS Policy功能调研设计
+- fdw原理
+- pg内部分（无需考虑FDW接口）
+- extension内部分
+
+2. PCS 选举功能完善
+- 增加Status Notifier
+- 重构代码：interface层，代码解耦
+- Unit Test 试验
+
+3. 问题
+- 集成测试有没有比较方便的方法
+
+
+# 2023.03.03
+1. postdb v4新架构理解
+
+2. pcs election测试
