修改文件: 周工作.md

--- a/周工作.md
+++ b/周工作.md
@@ -75,4 +75,16 @@ grammar_cjkRuby: true
 # 2023.03.03
 1. postdb v4新架构理解
 
-2. pcs election测试
+2. 继续pcs election测试
+- 测试过程中发现extension会偶尔崩溃。
+原因是coordinator与pcs都是异步运行的。
+在发送数据时，有可能coordinator还没有读取元数据信息，导致so crash
+在peer处于 normal状态时发生数据，问题得到解决
+
+
+
+# 2023.03.10
+1. 新架构下修改PCS
+
+
+2. PCS怎么发现并处理Node Failure
