修改文件: 周工作.md

--- a/周工作.md
+++ b/周工作.md
@@ -85,6 +85,7 @@ grammar_cjkRuby: true
 
 # 2023.03.10
 1. 新架构下修改PCS
+PCS之间选主改为由指定pstore进行投票
+选主条件：多数派
 
-
-2. PCS怎么发现并处理Node Failure
+2. 调研：PCS怎么发现并处理Node Failure
