--- a/周工作.md
+++ b/周工作.md
@@ -85,7 +85,11 @@ grammar_cjkRuby: true
 
 # 2023.03.10
 1. 新架构下修改PCS
-PCS之间选主改为由指定pstore进行投票
-选主条件：多数派
 
-2. 调研：PCS怎么发现并处理Node Failure
+
+2. PCS怎么发现并处理Node Failure
+
+
+# 2023.03.17
+1. pcs 选主完成： 由storage投票
+2. 
