修改文件: 周工作.md

--- a/周工作.md
+++ b/周工作.md
@@ -85,11 +85,17 @@ grammar_cjkRuby: true
 
 # 2023.03.10
 1. 新架构下修改PCS
+PCS之间选主改为由指定pstore进行投票
+选主条件：多数派
 
+2. 调研：PCS怎么发现并处理Node Failure
 
-2. PCS怎么发现并处理Node Failure
 
 
 # 2023.03.17
-1. pcs 选主完成： 由storage投票
-2. 
+
+1. PCS之间选主改为由指定pstore进行投票
+
+2. pcs node failure调研
+其他系统的实现
+方案建议
